config/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kfserving-models-web-app
  namespace: kfserving-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kfserving-models-web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/component: kfserving-models-web-app
    spec:
      containers:
      - image: kfserving/models-web-app
        imagePullPolicy: Always
        name: kfserving-models-web-app
        ports:
        - containerPort: 5000
      serviceAccountName: kfserving-models-web-app
