config/web-app/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: models-web-app
  namespace: kfserving-system
spec:
  gateways:
  - $(ingressGateway)
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /models/
    rewrite:
      uri: /
    route:
    - destination:
        host: models-web-app.kubeflow.svc.cluster.local
        port:
          number: 80
